examples/patterns/fake-service-multi-cloud/templates/api-gw-http-route.yml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: route-fake-service-service-a
  namespace: default
spec:
  parentRefs:
  - name: api-gw-fake-service
  rules:
  - backendRefs:
    - kind: Service
      name: dc1-aws-micro-service-a
      port: 9090
